Fix starting on remote and minimal

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -709,12 +709,12 @@ jobs:
           # Because there is no 'ansys-tools-path' we need to input the
           # executable path with the env var: PYMAPDL_MAPDL_EXEC.
 
-          if [[ $MAPDL_VERSION == *"latest-ubuntu"* ]] ; then
+          if [[ "${{ matrix.mapdl-image }}" == *"latest-ubuntu"* ]] ; then
             version="242"
           else
             version=$(echo "${{ matrix.mapdl-image }}" | head -c 5 | tail -c 4 | tr -d '.')
           fi;
-  
+
           echo "$version"
 
           export PYMAPDL_MAPDL_EXEC=/ansys_inc/v"$version"/ansys/bin/ansys"$version"
