--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ doc = [
     "pythreejs==2.4.2",
     "pyvista[trame]==0.43.4",
     "sphinx-autobuild==2024.2.4",
-    "sphinx-autodoc-typehints==1.25.2",
+    "sphinx-autodoc-typehints==2.0.0.",
     "sphinx-copybutton==0.5.2",
     "sphinx-design==0.5.0",
     "sphinx-gallery==0.15.0",
