--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -13,3 +13,7 @@ Dependencies:
 CI/CD:
 - changed-files:
   - any-glob-to-any-file: ['docker/**/*', '.github/**/*', '.ci/**/*']
+
+Testing:
+- changed-files:
+  - any-glob-to-any-file: ['tests/*', 'tests/**/*']
