--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -828,7 +828,7 @@ jobs:
   release:
     name: "Release"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    needs: [smoke-tests, docs-build, build-test, build-test-ubuntu, build-test-ubuntu-minimal]
+    needs: [smoke-tests, docs-build, build-test, build-test-ubuntu, build-test-ubuntu-minimal, update-changelog]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python
