--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "ansys-mapdl-reader>=0.51.7",
     "ansys-math-core>=0.1.2",
     "ansys-platform-instancemanagement~=1.0",
+    "ansys-tools-visualization-interface>=0.2.2",
     "platformdirs>=3.6.0",
     "click>=8.1.3", # for CLI interface
     "tabulate>=0.8.0", # for cli plotting
@@ -58,11 +59,11 @@ classifiers = [
 jupyter = [
     "jupyterlab>=3",
     "ipywidgets",
-    "pyvista[jupyter]",
 ]
 
 tests = [
     "ansys-dpf-core==0.10.1",
+      "ansys-tools-visualization-interface==0.2.2",
     "autopep8==2.1.1",
     "matplotlib==3.9.0",
     "scipy==1.13.1",
@@ -82,6 +83,7 @@ doc = [
     "ansys-dpf-core==0.10.1",
     "ansys-mapdl-reader==0.53.0",
     "ansys-sphinx-theme==0.16.2",
+    "ansys-tools-visualization-interface==0.2.2",
     "grpcio==1.64.0",
     "imageio-ffmpeg==0.4.9",
     "imageio==2.34.1",
