--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,7 @@ show_missing = true
 skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,*.cdb,*.CDB,build,./docker/mapdl/v*,./factory/*,./ansys/mapdl/core/mapdl_functions.py,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
 quiet-level = 3
 ignore-regex=".*codespell-ignore$|NORML|POIN"
+ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
 
 [tool.numpydoc_validation]
 checks = [
