--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,7 +47,7 @@ repos:
   rev: v2.3.0
   hooks:
   - id: codespell
-    args: ["--toml", "pyproject.toml", "--ignore-words", "doc/styles/config/vocabularies/ANSYS/accept.txt"]
+    args: ["--toml", "pyproject.toml"]
     additional_dependencies: ["tomli"]
 
 # - repo: https://github.com/pycqa/pydocstyle
