--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -48,7 +48,7 @@ updates:
 
        core:
           patterns:
-            - "*ansys*"
+            - "ansys*"
             - "click"
             - "matplotlib"
             - "pexpect"
@@ -57,6 +57,7 @@ updates:
             - "scipy"
             - "tqdm"
             - "vtk"
+            - "tabulate"
 
           exclude-patterns:
             - "ansys-api-mapdl"
