fix: update the codestyle

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
 [tox]
 description = Default tox environments list
 envlist =
-    style,{py38,py39,py310,py311,py312}{,-coverage},doc
+    code-style
+    doc-style
+    {py38,py39,py310,py311,py312}{,-coverage}
+    doc
 skip_missing_interpreters = true
 isolated_build = true
 isolated_build_env = build
@@ -22,8 +25,9 @@ extras = tests
 commands =
     pytest {env:PYTEST_MARKERS:} {env:PYTEST_EXTRA_ARGS:} {posargs:-vv}
 
-[testenv:style]
+[testenv:code-style]
 description = Checks project code style
+skip_install = true
 deps =
     pre-commit
 commands =
