fix: update vale

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,15 @@ commands =
     pre-commit install
     pre-commit run --all-files --show-diff-on-failure
 
+[testenv:doc-style]
+description = Checks project documentation style
+skip_install = true
+allowlist_externals =
+    vale
+commands =
+    vale sync --config="{toxinidir}/doc/.vale.ini"
+    vale --config="{toxinidir}/doc/.vale.ini" "{toxinidir}/doc" 
+
 [testenv:doc]
 description = Check if documentation generates properly
 extras = doc
