--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ doc = [
     "sphinx-copybutton==0.5.2",
     "sphinx-design==0.6.0",
     "sphinx-gallery==0.16.0",
+    "sphinx-jinja==2.0.2",
     "sphinx-notfound-page==1.0.2",
     "sphinxcontrib-websupport==1.2.7",
     "sphinxemoji==0.3.1",
