--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     doc-style
     {py39,py310,py311,py312}{,-coverage}
     doc-{links,html}
+    docker-run-{linux_host,windows_host}
 skip_missing_interpreters = true
 isolated_build = true
 isolated_build_env = build
@@ -54,3 +55,21 @@ passenv =
 extras = doc
 commands =
     sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxinidir}/doc/_build/{env:BUILDER}" --color -vW -b {env:BUILDER} -j auto
+
+[testenv:docker-run-{linux_host,windows_host}]
+description = Run tests in a docker container
+skip_install = true
+allowlist_externals =
+    docker
+platform = 
+    linux_host: linux
+    windows_host: win32
+passenv = 
+    ANSYSLMD_LICENSE_FILE
+    LOCAL_MAPDL_PORT
+    MAPDL_DOCKER_REGISTRY_URL
+commands = 
+    docker run \
+    --env  ANSYSLMD_LICENSE_FILE={env:ANSYSLMD_LICENSE_FILE} \
+    --name mapdl -p {env:LOCAL_MAPDL_PORT}:50052 \
+    {env:MAPDL_DOCKER_REGISTRY_URL} -smp
