fix: add the docker run env

--- a/tox.ini
+++ b/tox.ini
@@ -56,14 +56,13 @@ extras = doc
 commands =
     sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxinidir}/doc/_build/{env:BUILDER}" --color -vW -b {env:BUILDER} -j auto
 
-[testenv:docker-run-{linux_host,windows_host}]
+[testenv:docker-run-{linux_host}]
 description = Run tests in a docker container
 skip_install = true
 allowlist_externals =
     docker
 platform = 
     linux_host: linux
-    windows_host: win32
 passenv = 
     ANSYSLMD_LICENSE_FILE
     LOCAL_MAPDL_PORT
@@ -73,3 +72,4 @@ commands =
     --env  ANSYSLMD_LICENSE_FILE={env:ANSYSLMD_LICENSE_FILE} \
     --name mapdl -p {env:LOCAL_MAPDL_PORT}:50052 \
     {env:MAPDL_DOCKER_REGISTRY_URL} -smp
+
