feat: apply suggestions from @jorgepiloto

--- a/tox.ini
+++ b/tox.ini
@@ -13,10 +13,6 @@ isolated_build_env = build
 [testenv]
 description = Checks for project unit tests and coverage (if desired)
 basepython =
-    tests39: python3.9
-    tests310: python3.10
-    tests311: python3.11
-    tests312: python3.12
     py: python3
     {code-style,doc-links,doc-html, tests}: python3
 setenv =
@@ -56,18 +52,23 @@ extras = doc
 commands =
     sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxinidir}/doc/_build/{env:BUILDER}" --color -vW -b {env:BUILDER} -j auto
 
-[testenv:docker-run-{linux_host}]
+[testenv:docker-run-{linux_host, windows_host}]
 description = Run tests in a docker container
 skip_install = true
 allowlist_externals =
     docker
 platform = 
     linux_host: linux
+    windows_host: win32
 passenv = 
     ANSYSLMD_LICENSE_FILE
     LOCAL_MAPDL_PORT
     MAPDL_DOCKER_REGISTRY_URL
+    MAPDL_DOCKER_REGISTRY_URL
+    GITHUB_USERNAME
+    GITHUB_TOKEN
 commands = 
+    docker login ghcr.io -u GITHUB_USERNAME -p GITHUB_TOKEN
     docker run \
     --env  ANSYSLMD_LICENSE_FILE={env:ANSYSLMD_LICENSE_FILE} \
     --name mapdl -p {env:LOCAL_MAPDL_PORT}:50052 \
