fix: update the tox file

--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ passenv =
     GITHUB_USERNAME
     GITHUB_TOKEN
 commands = 
-    docker login ghcr.io -u GITHUB_USERNAME -p GITHUB_TOKEN
+    docker login ghcr.io -u {env:GITHUB_USERNAME} -p {env:GITHUB_TOKEN}
     docker run \
     --env  ANSYSLMD_LICENSE_FILE={env:ANSYSLMD_LICENSE_FILE} \
     --name mapdl -p {env:LOCAL_MAPDL_PORT}:50052 \
