fix: wnv variable for docs

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ setenv =
 passenv =
     BUILD_API
     BUILD_EXAMPLES
+    ON_DOCUMENTATION
 extras = doc
 commands =
     sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxinidir}/doc/_build/{env:BUILDER}" --color -vW -b {env:BUILDER} -j auto
