--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.3'
 
-# This is a docker-compose file which launches a remote MAPDL instance in a dockerized environment.
+# This is a docker-compose file that will run Ansys MAPDL and DPF in a container.
 # You can connect to this instance through port 50052 and 50055 (for the database feature).
 #
 # For the license, you need to provide the hostname of the license server.
@@ -11,8 +11,8 @@ version: '3.3'
 # - Docker
 # - Docker images from ghcr.io (you might need to do 'docker login ghcr.io' first)
 #
-# USAGE:
-# ======
+# USAGE - MAPDL
+# ============
 #
 # 1. You need two environment variables. One called `DOCKER_IMAGE` which contains the path to the
 # Docker image, and another one called `ANSYSLMD_LICENSE_FILE` which points to the license server.
@@ -23,10 +23,50 @@ version: '3.3'
 # 
 # 2. Run the following command:
 # 
-#     docker-compose up
+#     docker-compose up -d mapdl
 #
 # Optionally, you can specify the '-d' flag for detached mode (the container will run in the background).
 #
+
+# USAGE - DPF
+# ===========
+
+# 1. You need to have the 'DPF_DOCKER_IMAGE' environment variable set. For example:
+#
+#        export DPF_DOCKER_IMAGE=ghcr.io/ansys/dpf-core:22.2dev
+#
+# as well as the `ANSYSLMD_LICENSE_FILE` env var.
+# 2. Run the following command:
+#
+#     docker-compose up -d dpf
+#
+# Optionally, you can specify the '-d' flag for detached mode (the container will run in the background).
+#
+#
+# USAGE - MAPDL LOCAL
+# ===================
+# It is said to be running as 'local' because it will mount the current directory in '/local' 
+# inside the container (presumably you will have the cloned repository in the current directory),
+# and it will override the entrypoint to run the 'bash' command.
+#
+# 1. You need to have the 'mapdl' service running. You can do this by running the command:
+#  
+#      docker-compose up -d mapdl
+#
+# 2. Once you have done this, you can start the service by running:
+#
+#      docker-compose -f d mapdl-local
+#
+# 3. you can run together by `
+#     docker-compose -up -d mapdl mapdl-local
+#
+# NOTES
+# =====
+#
+# - If you need to run a license server, please have a look at 'docker-compose.license_server.yml'
+# file. In that case, the command to launch everything is:
+# 
+#      docker-compose -f docker-compose.yml -f docker-compose.license-server.yml -f docker-compose.local.yml up
 #
 # NOTES:
 # ======
@@ -56,14 +96,6 @@ services:
     user: "0:0"
     entrypoint: "/bin/bash ansys -grpc"
 
-  # To be executed after license server
-  # You need an env var which points to the docker dpf image:
-  # 
-  #        export DPF_DOCKER_IMAGE=ghcr.io/ansys/dpf-core:22.2dev
-  # 
-  # As well as the `ANSYSLMD_LICENSE_FILE` env var.
-  #
-
   dpf:
     image: ${DPF_DOCKER_IMAGE}
     ports:
@@ -71,36 +103,6 @@ services:
     restart: always
     environment:
       - ANSYSLMD_LICENSE_FILE=${ANSYSLMD_LICENSE_FILE}
-
-  # DESCRIPTION
-  # ===========
-  #
-  # This docker-compose file extends the 'base' docker-compose file to run the docker in such a way that
-  # you can then attach your VSCode instance and work locally.
-  #
-  # It is said to be running as 'local' because it will mount the current directory in '/local' 
-  # inside the container (presumably you will have the cloned repository in the current directory),
-  # and it will override the entrypoint to run the 'bash' command.
-  #
-  #
-  # USAGE
-  # =====
-  #
-  # 1. You need to have the 'base' docker-compose file in the same directory as this file, and fulfill
-  # its requirements (license server env var).
-  #
-  # 2. Once you have done this, you can start the service by running:
-  #
-  #      docker-compose -f docker-compose.yml -f docker-compose.local.yml up
-  #
-  # NOTES
-  # =====
-  #
-  # - If you need to run a license server, please have a look at 'docker-compose.license_server.yml'
-  # file. In that case, the command to launch everything is:
-  # 
-  #      docker-compose -f docker-compose.yml -f docker-compose.license-server.yml -f docker-compose.local.yml up
-  #
 
   mapdl-local:
     user: "0:0"
