fixing missing label message

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     schedule:
       interval: "weekly"
     labels:
-      - "maintenance"
+      - "Maintenance"
     assignees:
       - "ansys/pymapdl-maintainers"
     commit-message:
