fix: add docker compose and tox docker buid commands

--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,15 @@ extras = doc
 commands =
     sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxinidir}/doc/_build/{env:BUILDER}" --color -vW -b {env:BUILDER} -j auto
 
+[testenv:docker-build-ubuntu_images]
+description = Build docker images for Ubuntu
+skip_install = true
+allowlist_externals =
+    docker
+    compose
+commands =
+    docker-compose -f "{toxinidir}/docker/linux/docker-compose.yml" build
+
 [testenv:docker-run-{linux_host, windows_host}]
 description = Run tests in a docker container
 skip_install = true
