fix: add tox docker buid commands

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist =
     {py39,py310,py311,py312}{,-coverage}
     doc-{links,html}
     docker-run-{linux_host,windows_host}
+    docker-build-ubuntu_images
 skip_missing_interpreters = true
 isolated_build = true
 isolated_build_env = build
